# GC3_vscode

./: .gitignore  README.md  Touhou Spellcard Battle - Game Design Document.docx  list  log  note.list  note.txt  tatus
DuplicateFounder/: CMakeLists.txt
DuplicateFounder/src/: ThreadPool.h  duplicateFounder.cpp
Editor/: CMakeLists.txt
Editor/src/: BuildObjectTool.cpp  BuildObjectTool.h  DamakuEditor.cpp  DamakuEditor.h  DisplaySample.cpp  DisplaySample.h  EditLayer.cpp  EditLayer.h  EditObject.cpp  EditObject.h  EditRenderedObjectComponent.cpp  EditRenderedObjectComponent.h  EditorMain.cpp  EditorMain.h  EditorProperty.cpp  EditorProperty.h  EditorScreen.cpp  EditorScreen.h  EnemyEditorComponent.cpp  EnemyEditorComponent.h  EventManager.cpp  EventManager.h  F_DamakuBase.cpp  F_DamakuBase.h  F_DamakuLineTrace.cpp  F_DamakuLineTrace.h  LuaObjectEditorComponent.cpp  LuaObjectEditorComponent.h  NewRenderModel.cpp  NewRenderModel.h  ObjectColider.h  ObjectDisplayer.cpp  ObjectDisplayer.h  ObjectListHolder.cpp  ObjectListHolder.h  ObjectSlot.cpp  ObjectSlot.h  ObjectUVRect.cpp  ObjectUVRect.h  PaternEditor.cpp  (+16 more)
Feintgine/: .gitignore  CMakeLists.txt
Feintgine/proto_data/: F_Screen.proto  objectData.proto  objectData_edited.proto
Feintgine/src/: AST_Node.cpp  AST_Node.h  A_Context_save.cpp  A_Context_saver.h  AfterImageParticle.cpp  AfterImageParticle.h  AnimatedObject.cpp  ArcFunction.cpp  ArcFunction.h  ArcFunction_Custom_aff.cpp  ArcFunction_Custom_aff.h  ArcFunction_Epicycloid.cpp  ArcFunction_Epicycloid.h  ArcFunction_Fourier_test.cpp  ArcFunction_Fourier_test.h  ArcFunction_feint_custom1.cpp  ArcFunction_feint_custom1.h  ArcFunction_feint_custom2.cpp  ArcFunction_feint_custom2.h  ArcFunction_hypocycloid.cpp  ArcFunction_hypocycloid.h  ArcFunction_hypotrochoid.cpp  ArcFunction_hypotrochoid.h  ArcFunction_scripted_base.cpp  ArcFunction_scripted_base.h  Arc_fourier.cpp  Arc_fourier.h  AudioEngine.cpp  AudioEngine.h  Brush.cpp  Brush.h  Camera2D.cpp  Camera2D.h  Camera3D.cpp  Camera3D.h  ChargeParticle.cpp  ChargeParticle.h  ChargingHandler.cpp  ChargingHandler.h  ClientSocket.cpp  (+177 more)
Feintgine_GC_deps/include/: FreeImage.h
GC3/: .gitignore  CMakeLists.txt
GC3/release/: CMakeCache.txt  cmake_install.cmake  test.txt
GC3/release/Assets/F_AObjects/backup/: marisa.xml
GC3/release/Assets/F_Objects/: flower_bush.fob
GC3/release/Assets/Objects/: apple_storage.fob  crate_single_empty.fob  grass.fob  house_empty.fob  momiji.fob  peach.fob  rock_1.fob  scarerow.fob  tree_1.fob  tree_2.fob  vase.fob  well_single.fob
GC3/release/Assets/Packets/: komachi_effect.xml
GC3/release/Assets/bu/: shiki.xml
GC3/release/Data/: Reimu_diagloue_1.dlg
GC3/release/Data/bossInfo/: patchouli_knowledge.xml
GC3/release/Data/stageData/enemyState/: fairyState.est
GC3/release/Data/stageData/enemyState/backup/: fairyState.est
GC3/release/Data/stageData/levelState/: demo.lvl_bk  empty.lvl  testdialouge.lvl
GC3/release/Data/stageData/levelState/backup/: testLvl.lvl
GC3/release/Data/stageData/pattern/: bulletState.bls  cool_glsl_list.list
GC3/release/GUI/: green.imageset  green.xml
GC3/release/GUI/backup/: Golden.imageset
GC3/release/GUI/fonts/: ARIALUNI-12.font  ARIALUNI-16.font  DejaVuSans-12_a_outline.font  DejaVuSans-8.font  craftmincho-20.font
GC3/release/GUI/looknfeel/: AlfiskoSkin.looknfeel
GC3/release/Levels/: hakurei.txt  level1.txt
GC3/release/Scence/: test2.fsc  testScene.fsc
GC3/release/Shaders/: blurShading.frag  chat.vert  normalVS.txt  pickFS.txt  texture.frag  textureShading.frag
GC3/release/Shaders/FBO/: frameBuffer.vert
GC3/release/Shaders/HiganMainMenuScreen/: avtShader.vert
GC3/release/Shaders/MagicalShader/: crystal2.frag  stuck.frag  universe.frag  universe_2.frag
GC3/release/Shaders/ShaderToy/: editor.frag  editor.vert  normal.frag  textShader.vert  texture.frag  textureShading_1.vert  whiteBlack.frag
GC3/release/Shaders/ShaderToy/backup/: normal.frag
GC3/release/Shaders/TestRender/: normalshader.frag
GC3/release/Shaders/backup/: texture.frag
GC3/release/Shaders/backup/backup 2/: textureShading.frag
GC3/src/: App.cpp  App.h  AvatarSelection.cpp  AvatarSelection.h  B2ContactListener.cpp  B2ContactListener.h  BGMLabel.cpp  BGMLabel.h  BGM_Label.cpp  BGM_Label.h  BackGroundMap.cpp  BackGroundMap.h  BaseAnimatedObject.cpp  BaseAnimatedObject.h  BasicMonster.cpp  BasicMonster.h  Boss.cpp  Boss.h  Box.h  BulletManager.cpp  BulletManager.h  BulletManupilator.cpp  BulletManupilator.h  BulletTypeDemo.cpp  BulletTypeDemo.h  Chapter_Label.cpp  Chapter_Label.h  CharacterAvatar.cpp  CharacterAvatar.h  CharacterSelectionScreen.cpp  CharacterSelectionScreen.h  CharacterTestScreen.cpp  CharacterTestScreen.h  ChatBubble.cpp  ChatBubble.h  CustomButton.cpp  CustomButton.h  CustomMessageBox.cpp  CustomMessageBox.h  DataManager.cpp  (+238 more)
GC3/storylines/: mainplot.txt
PacketDescription/: LuaManager.h  NetworkPacket.cpp  NetworkPacket.h
PacketDescription/RIMM_Client_Test/: .ClientDownloadHandler.h.swp  CMakeLists.txt  ClientDownloadHandler.cpp  ClientDownloadHandler.h  ClientHandler.h
PacketDescription/RIMM_Server/: DataBaseHandler.cpp  DataBaseHandler.pp  main.cpp
PacketDescription/t_Client_Test/: ClientHandler.cpp  main.cpp
PacketDescription/t_Server/: CMakeLists.txt  DataBaseHandler.h  FileTransferHost.cpp  FileTransferHost.h  ServerHandler.cpp  ServerHandler.h  main.cpp
TB_Server/: CMakeLists.txt
TB_Server/data/: VS_Code_prjGC3_vscodeTB_Serverdatasqqe.sql  dump.sql  dump_v1.sql  dump_v2.sql  dumpvs.sql  eee.sql  sqlite3_command_note.sql  t2.db  tData.db
TB_Server/luaFiles/: accountHandle.lua  clientHandling.lua  serverConnections.lua  serverSideScript.lua  serverWrapper.lua
TB_Server/manual/: sqlite3_command_note.sql
TB_Server/src/: DataBaseHandler.cpp  DataBaseHandler.h  ServerMain.cpp  ServerMain.h  ServerScriptingManager.cpp  ServerScriptingManager.h  main.cpp
TB_ServerInquiry/: CMakeLists.txt
TGUI_theme/: ThemeCreator.hpp
Touhou_TB/: .gitignore  CMakeLists.txt  print_checkData.lua
Whiteboard/: CMakeLists.txt
(+91 files in other folders)
